# Sloch

./: .gitignore  ByteStringUtils.hs  Cli.hs  DirectoryContents.hs  DirectoryTree.hs  FilePathUtils.hs  LangInfo.hs  Language.hs  LineCounter.hs  Main.hs  Makefile  MapUtils.hs  Options.hs  Sloch.hs  initialize-tests.sh  site.html  site.sh  sloch.cabal  test.hs
src/: DirectoryTree.hs  Sloch.hs
src/lang-gen/: Language.hs  Language.mustache  LanguageGen.hs  Main.hs  Parser.hs  languages
src/lang-gen/Text/Parsec/Char/: Extras.hs
src/sloch/: Cli.hs  DirectoryTree.hs  Dirent.hs  Import.hs  Language.hs  LineCounter.hs  Main.hs  Sloch.hs
src/sloch/Control/Monad/: Extras.hs
src/sloch/Data/Map/: Extras.hs
src/sloch/Sloch/: Dirent.hs  Show.hs  Types.hs
src/sloch/System/Directory/: Extras.hs
src/sloch/System/FilePath/: Extras.hs
src/sloch/System/Posix/Files/: Extras.hs
test/sloch/: DirectoryTreeTest.hs  DirentTest.hs  TestMain.hs
test/sloch/DirentTest/: symlink
