name:                sloch
version:             0.2.0
synopsis:            Source-lines-of-code counter

homepage:            http://github.com/mitchellwrosen/Sloch
license:             BSD3
license-file:        LICENSE
author:              Mitchell Rosen
maintainer:          mitchellwrosen@gmail.com
category:            Data
build-type:          Simple
cabal-version:       >=1.8

executable sloch
  main-is:        Main.hs
  hs-source-dirs: src/sloch
  ghc-options: -Wall -O2
  other-modules: Control.Monad.Extras
               , Data.Map.Extras
               , Sloch.Show
               , System.Directory.Extras
               , System.FilePath.Extras
               , System.Posix.Files.Extras
  build-depends: base                 >= 4
               , pipes                >= 4.0
               , pipes-bytestring     >= 1.0.1
               , process              >= 1.1
               , containers           >= 0.5
               , filepath             >= 1.3
               , unix                 >= 2.6
               , directory            >= 1.2
               , transformers         >= 0.3
               , lens                 >= 3.9
               , optparse-applicative >= 0.5
               , pipes-safe           >= 2.0
               , pretty               >= 1.1
               , mmorph               >= 1.0
               , mtl                  >= 2.1
