name:                sloch
version:             0.2.0
synopsis:            Source-lines-of-code counter

homepage:            http://github.com/mitchellwrosen/Sloch
license:             BSD3
license-file:        LICENSE
author:              Mitchell Rosen
maintainer:          mitchellwrosen@gmail.com
category:            Data
build-type:          Simple
cabal-version:       >=1.8

executable sloch
  main-is:        Main.hs
  hs-source-dirs: src/sloch
  ghc-options: -Wall -O3 -threaded -rtsopts -with-rtsopts=-N
  other-modules: Cli
               , Control.Monad.Extras
               , Data.Map.Extras
               , Dirent
               , Language
               , LineCounter
               , Sloch
               , Sloch.Show
               , Sloch.Dirent
               , System.Directory.Extras
               , System.FilePath.Extras
               , System.Posix.Files.Extras
  build-depends: async                >=2 && <3
               , base                 >=4 && < 5
               , pipes                >=4.0
               , pipes-bytestring     >=1.0.1
               , process              >=1.1
               , containers           >=0.5
               , filepath             >=1.3
               , unix                 >=2.6
               , directory            >=1.2
               , transformers         >=0.3
               , lens                 >=3.9
               , optparse-applicative >=0.5
               , pipes-safe           >=2.0
               , pretty               >=1.1
               , mmorph               >=1.0
               , mtl                  >=2.1
  extensions: LambdaCase

executable lang-gen
  main-is:        Main.hs
  hs-source-dirs: src/lang-gen
  ghc-options: -Wall
  other-modules: Text.Parsec.Char.Extras
  build-depends: base       >= 4
               , bytestring >= 0.10
               , hastache   >= 0.5
               , parsec     >= 3.0

test-suite test
   type: exitcode-stdio-1.0
   main-is: TestMain.hs
   hs-source-dirs: src/sloch test/sloch
   ghc-options: -Wall
   build-depends: base                 >= 4 && < 5
                , pipes                >= 4.0
                , pipes-bytestring     >= 1.0.1
                , process              >= 1.1
                , containers           >= 0.5
                , filepath             >= 1.3
                , unix                 >= 2.6
                , directory            >= 1.2
                , transformers         >= 0.3
                , lens                 >= 3.9
                , optparse-applicative >= 0.5
                , pipes-safe           >= 2.0
                , pretty               >= 1.1
                , mmorph               >= 1.0
                , mtl                  >= 2.1
                , tasty
                , tasty-hspec
                , hspec
                -- Remove after Test.Tasty.Hspec lands
